feat: Enhance CLAUDE.md and update project configuration
- Added detailed metadata and key concepts to CLAUDE.md for improved project clarity.
- Deleted obsolete Graph RAG MCP Server Scope.md file to streamline documentation.
- Updated pyproject.toml with new author, license, and keywords for better project visibility.
- Enhanced README.md with new features, installation instructions, and supported MCP clients.
- Introduced automated installation script for easier setup and configuration.
- Improved scripts for PARA taxonomy enrichment, including a new command for full vault enrichment.
- Updated mcp_server.py to support HTTP transport for better client integration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,27 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "graph-rag-mcp-server"
 version = "0.1.0"
 description = "Graph RAG MCP Server for Obsidian vault with ChromaDB, RDFLib, and Gemini 2.5 Flash"
 readme = "README.md"
 requires-python = ">=3.13"
+authors = [
+    {name = "Graph RAG MCP Server", email = "noreply@example.com"},
+]
+license = {text = "MIT"}
+keywords = ["mcp", "obsidian", "rag", "graph", "ai", "claude"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
 dependencies = [
     "chromadb>=1.0.20",
     "google-genai>=1.31.0",
@@ -16,13 +34,27 @@ dependencies = [
     "watchfiles>=0.24.0",
     "typer>=0.15.1",
     "fastapi>=0.115.6",
+    "uvicorn>=0.32.0",
     "python-frontmatter>=1.1.0",
     "python-dotenv>=1.0.1",
     "pyrefly>=0.29.2",
     "oxrdflib>=0.4.0",
 ]
 
-[tool]
+[project.scripts]
+graph-rag-mcp = "main:main"
+graph-rag-mcp-stdio = "src.mcp_server:run_stdio"
+graph-rag-mcp-http = "src.mcp_server:run_http"
+graph-rag-mcp-install = "install:main"
+
+[project.urls]
+Homepage = "https://github.com/yourusername/graph-rag-mcp-server"
+Documentation = "https://github.com/yourusername/graph-rag-mcp-server/blob/main/README.md"
+Repository = "https://github.com/yourusername/graph-rag-mcp-server"
+Issues = "https://github.com/yourusername/graph-rag-mcp-server/issues"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src", "scripts"]
 
 [tool.pyrefly]
 project-includes = ["**/*"]
