feat: Transition MCP server to use `uvx` for improved hermetic execution
- Updated entry points in entry_points.py to reflect new import paths and project structure.
- Modified install.py and configuration files to utilize `uvx` for running MCP servers, enhancing command consistency.
- Enhanced main.py to implement logging instead of print statements for better output management.
- Introduced a new documentation file for hosting MCP servers with `uvx`, providing a comprehensive guide for developers.
- Added a test corpus for evaluating MCP tools, ensuring deterministic behavior across different models.
- Implemented protection for test content in the enrichment process to prevent accidental modifications.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,9 @@ include = [
     "configs/**/*.json",
 ]
 
+[tool.hatch.build.targets.wheel]
+packages = ["src", "."]
+
 [tool.pyrefly]
 project-includes = ["**/*"]
 project-excludes = [
@@ -71,3 +74,13 @@ project-excludes = [
     "**/*venv/**/*",
     "**/scripts/**/*",
 ]
+
+[tool.mypy]
+mypy_path = "src:."
+
+[tool.pyright]
+include = ["src", "."]
+extraPaths = ["src", "."]
+
+[tool.pylsp-mypy]
+mypy_path = "src:."
