refactor: Transition to a unified ChromaDB store and remove RDF dependencies
- Replaced the dual database architecture with a unified ChromaDB store that integrates vector search and graph relationships.
- Removed references to the RDF graph database and associated configurations from the codebase and documentation.
- Updated environment variables and configuration files to reflect the new unified store setup.
- Enhanced documentation to clarify the new architecture and indexing commands.
- Refactored related scripts and components to utilize the unified store for all operations, improving performance and maintainability.

--- a/.env.example
+++ b/.env.example
@@ -8,16 +8,7 @@
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # =============================================================================
-# RDF Graph Configuration (Optional - uses embedded SQLite)
-# =============================================================================
-# RDF SQLite database file path (optional, defaults to .vault_graph.db)
-# RDF_DB_PATH=/custom/path/to/vault_graph.db
-
-# RDF store identifier (optional, defaults to obsidian_vault_graph)
-# RDF_STORE_IDENTIFIER=my_vault_graph
-
-# =============================================================================
-# Vault Configuration (Optional - defaults to parent directory)
+# Vault and Database Configuration (Optional - defaults to parent directory)
 # =============================================================================
 # Comma-separated list of vault paths (optional, defaults to parent folder)
 # OBSIDIAN_RAG_VAULTS=/path/to/vault1,/path/to/vault2
@@ -38,13 +29,20 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # OBSIDIAN_RAG_GEMINI_MODEL=gemini-2.5-flash
 
 # =============================================================================
-# Chunking Configuration (Optional)
+# Semantic Chunking Configuration (Optional)
 # =============================================================================
-# Maximum characters per chunk (optional, defaults to 1800)
-# OBSIDIAN_RAG_MAX_CHARS=2000
+# Chunking strategy (semantic or character, defaults to semantic)
+# OBSIDIAN_RAG_CHUNK_STRATEGY=semantic
 
-# Character overlap between chunks (optional, defaults to 200)
-# OBSIDIAN_RAG_OVERLAP=250
+# Semantic chunking parameters
+# OBSIDIAN_RAG_SEMANTIC_MIN_CHUNK_SIZE=100
+# OBSIDIAN_RAG_SEMANTIC_MAX_CHUNK_SIZE=3000
+# OBSIDIAN_RAG_SEMANTIC_MERGE_THRESHOLD=200
+# OBSIDIAN_RAG_SEMANTIC_INCLUDE_CONTEXT=true
+
+# Character chunking parameters (for legacy mode)
+# OBSIDIAN_RAG_MAX_CHARS=1800
+# OBSIDIAN_RAG_OVERLAP=200
 
 # =============================================================================
 # MCP Server Configuration (Optional)
@@ -69,7 +67,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 #    uv sync
 #
 # 2. Index your vault:
-#    uv run scripts/reindex.py all
+#    uv run scripts/reindex.py unified
 #
 # 3. Start MCP server (stdio for Claude Desktop):
 #    uv run main.py
@@ -85,10 +83,11 @@ GEMINI_API_KEY=your_gemini_api_key_here
 #   "mcpServers": {
 #     "graph-rag-obsidian": {
 #       "command": "uv",
-#       "args": ["run", "python", "main.py"],
+#       "args": ["run", "graph-rag-mcp-stdio"],
 #       "cwd": "/path/to/graph-rag-mcp-server",
 #       "env": {
-#         "GEMINI_API_KEY": "your_api_key_here"
+#         "GEMINI_API_KEY": "your_api_key_here",
+#         "OBSIDIAN_RAG_VAULTS": "/path/to/your/vault"
 #       }
 #     }
 #   }
