--- a/configs/.env.example
+++ b/configs/.env.example
@@ -12,9 +12,8 @@ OBSIDIAN_RAG_VAULTS=/path/to/your/obsidian/vault,/path/to/another/vault
 # ChromaDB storage directory (for vector embeddings)
 OBSIDIAN_RAG_CHROMA_DIR=.chroma_db
 
-# RDF graph database path (Oxigraph with RocksDB)
-OBSIDIAN_RAG_RDF_DB_PATH=.vault_graph.db
-OBSIDIAN_RAG_RDF_STORE_IDENTIFIER=obsidian_vault_graph
+# ChromaDB collection name
+OBSIDIAN_RAG_COLLECTION=vault_collection
 
 # Embedding Model Configuration
 # Sentence transformer model for embeddings
