chore: Update environment configurations to standardize ChromaDB directory
- Added OBSIDIAN_RAG_CHROMA_DIR to multiple configuration files to ensure consistent database location across installations.
- Updated .env.example to clarify the importance of setting the ChromaDB storage location for persistent indexing.

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,10 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Comma-separated list of vault paths (optional, defaults to parent folder)
 # OBSIDIAN_RAG_VAULTS=/path/to/vault1,/path/to/vault2
 
-# ChromaDB storage location (optional, defaults to .chroma_db)
-# OBSIDIAN_RAG_CHROMA_DIR=/custom/path/to/chroma
+# IMPORTANT: ChromaDB storage location for persistent index
+# Recommended to set this to ensure consistent database location across installs
+# Defaults to .chroma_db in current directory if not set
+OBSIDIAN_RAG_CHROMA_DIR=/Users/YOUR_USERNAME/.local/share/graph-rag-mcp-server/chroma_db
 
 # ChromaDB collection name (optional, defaults to obsidian_vault)
 # OBSIDIAN_RAG_COLLECTION=my_vault_collection
