--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,30 @@ dependencies = [
     "dspy-ai>=3.0.3",
 ]
 
+[project.optional-dependencies]
+test = [
+    # Core testing framework
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-xdist>=3.2.0",  # For parallel test execution
+    # Test utilities
+    "factory-boy>=3.2.0",
+    "freezegun>=1.2.0",  # For time-based testing
+    "responses>=0.23.0",  # For HTTP mocking
+    # Performance and benchmarking
+    "pytest-benchmark>=4.0.0",
+    "memory-profiler>=0.60.0",
+    # Code quality
+    "pytest-flake8>=1.1.0",
+    "pytest-mypy>=0.10.0",
+    # Coverage reporting
+    "coverage[toml]>=7.0.0",
+    # For mock data generation
+    "faker>=18.0.0",
+]
+
 [project.scripts]
 graph-rag-mcp = "src.entry_points:run_main"
 graph-rag-mcp-stdio = "src.entry_points:run_stdio"
