chore: Add development dependencies for testing in pyproject.toml and uv.lock
- Introduced `pytest`, `pytest-flake8`, and `pytest-mypy` as development dependencies to enhance testing capabilities.
- Updated `pyproject.toml` to include a new dependency group for development.
- Modified `uv.lock` to reflect the addition of the new dev dependencies with specified version requirements.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,3 +93,10 @@ project-excludes = [
     "**/scripts/**/*",
     "**/tests/**/*",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-flake8>=1.3.0",
+    "pytest-mypy>=1.0.1",
+]
